Add api to get user's collections
