# routes/v1/CollectionsRoutes.php
@@ -1,3 +1,4 @@
 <?php
 
 Route::post('/users/{user}/collections', ['as' => 'collections.create', 'uses' => 'CollectionController@create'])->middleware('jwt.auth');
+Route::get('/users/{user}/collections', ['as' => 'collections.byUser', 'uses' => 'CollectionController@byUser']);
